Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118091

qmltc includes a non-existent qquickcheckbox_p_p.h

    XMLWordPrintable

Details

    • All
    • 8ba3d83f2 (dev), 77a87852a (6.6), 24655d187 (tqtc/lts-6.5)

    Description

      For the example below

      import QtQuick.Templates
      
      CheckBox {
      
      }

      qmltc includes a non-existent file:

      32:10: fatal error: private/qquickcheckbox_p_p.h: No such file or directory
         32 | #include "private/qquickcheckbox_p_p.h"
            |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      compilation terminated. 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sami.shalayel Sami Shalayel
            maksimshapovalov Maksim Shapovalov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes